// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HEADER TEXT Renders with DefaultProps 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontSize": 17,
      "fontWeight": "normal",
      "paddingBottom": 15,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  Body text
</Text>
`;

exports[`HEADER TEXT Renders with color prop (red) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "fontSize": 17,
      "fontWeight": "normal",
      "paddingBottom": 15,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  Red text
</Text>
`;
